fix jwt auth